--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1DHV45FH9R"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-1DHV45FH9R');
+    </script>
     <title>Johnny Mohawk Blog</title>
     <meta id='headerScripts'>
   </head>
